// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltips with mouse events should match snapshot 1`] = `
<React.Fragment>
  <g
    pointerEvents="auto"
    transform="translate(100 100)"
  >
    <rect
      fill="black"
      height={100}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      opacity="0"
      width={200}
      x="0"
      y="0"
    />
  </g>
</React.Fragment>
`;

exports[`Tooltips without mouse events should match snapshot 1`] = `
<React.Fragment>
  <g
    pointerEvents="none"
    transform="translate(100 100)"
  >
    <rect
      fill="black"
      height={100}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      opacity="0"
      width={200}
      x="0"
      y="0"
    />
  </g>
</React.Fragment>
`;
